TIL GitHub only fetches one commit from head by default

--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -40,6 +40,7 @@ jobs:
           lfs: true
           ssh-key: ${{ secrets.DEPLOY_KEY }}
           submodules: recursive
+          fetch-depth: 100
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
