--- a/Packages/io.chainsafe.web3-unity.loader/package.json
+++ b/Packages/io.chainsafe.web3-unity.loader/package.json
@@ -7,6 +7,7 @@
   "licensesUrl": "https://github.com/ChainSafe/web3.unity/blob/main/LICENSE",
   "documentationUrl": "https://docs.gaming.chainsafe.io/",
   "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.0.2"
   },
   "keywords": [
     "web3",
