--- a/Packages/io.chainsafe.web3-unity/Runtime/chainsafe.web3-unity.asmdef
+++ b/Packages/io.chainsafe.web3-unity/Runtime/chainsafe.web3-unity.asmdef
@@ -8,7 +8,8 @@
         "GUID:4a7aa3f3f98a146a1a22cec006648e4f",
         "GUID:2475f66dc86de476fbf57ee4d48fb277",
         "GUID:ef24534b04b0d4a5d94edc102ea97a33",
-        "GUID:33de4d868b803453e9e80bc244c66263"
+        "GUID:33de4d868b803453e9e80bc244c66263",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
