--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -80,9 +80,13 @@ crashlytics-build.properties
 
 # Ignore the build artifacts from our libraries
 /io.chainsafe.web3-unity/Runtime/Libraries/*.dll
+/io.chainsafe.web3-unity/Runtime/Libraries/*.dll.meta
 
 /io.chainsafe.web3-unity/Runtime/Libraries/*.pdb
 /io.chainsafe.web3-unity/Runtime/Libraries/*.pdb.meta
+
+/io.chainsafe.web3-unity.lootboxes/Chainlink/Runtime/Libraries/*.dll
+/io.chainsafe.web3-unity.lootboxes/Chainlink/Runtime/Libraries/*.dll.meta
 
 /io.chainsafe.web3-unity.lootboxes/Chainlink/Runtime/Libraries/*.pdb
 /io.chainsafe.web3-unity.lootboxes/Chainlink/Runtime/Libraries/*.pdb.meta
