--- a/.github/workflows/reauthor.yaml
+++ b/.github/workflows/reauthor.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd ..
           
-          ssh-agent bash -c 'ssh-add "$DEPLOY_KEY"; git clone --bare git@github.com:rob1997/web3.unity.git'
+          git clone --bare git@github.com:rob1997/web3.unity.git
           
           cd web3.unity.git
           
@@ -58,5 +58,3 @@ jobs:
           ' --tag-name-filter cat -- --branches --tags
           
           git push --force --tags origin 'refs/heads/*'
-        env:
-          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
