--- a/.github/workflows/reauthor.yaml
+++ b/.github/workflows/reauthor.yaml
@@ -19,18 +19,13 @@ jobs:
     name: Re-author job
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Clone
+        uses: MrSquaare/ssh-setup-action@v1
         with:
-          ref: ${{ github.head_ref || github.ref_name }}
-          lfs: true
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-          submodules: recursive
-          fetch-depth: 100
+          host: github.com
+          private-key: ${{ secrets.DEPLOY_KEY }}
       - name: Clone repository
         run: |
-          cd ..
-          
           git clone --bare git@github.com:rob1997/web3.unity.git
           
           cd web3.unity.git
