--- a/.github/workflows/reauthor.yaml
+++ b/.github/workflows/reauthor.yaml
@@ -1,17 +1,19 @@
 name: Re-author
 on:
   push:
-    branches:
-      - rob/authoring-fix
   workflow_dispatch:
     inputs:
-      previous_author:
+      previous_email:
         required: true
         description: 'Author to change'
         type: string
-      new_author:
+      new_email:
         required: true
-        description: 'New author'
+        description: 'New author email'
+        type: string
+      new_username:
+        required: true
+        description: 'New author username'
         type: string
 
 jobs:
@@ -19,27 +21,27 @@ jobs:
     name: Re-author job
     runs-on: ubuntu-latest
     steps:
-      - name: Clone
+      - name: Set-up SSH
         uses: MrSquaare/ssh-setup-action@v1
         with:
           host: github.com
           private-key: ${{ secrets.DEPLOY_KEY }}
-      - name: Clone repository
+      - name: Clone and Re-author
         run: |
-          git clone --bare git@github.com:rob1997/web3.unity.git
+          git clone --bare git@github.com:ChainSafe/web3.unity.git
           
           cd web3.unity.git
           
-          git config user.email "robelgetnetrg@gmail.com"
+          git config user.email "$new_email"
           
-          git config user.name rob1997
+          git config user.name $new_username
           
           #!/bin/sh
 
           git filter-branch -f --env-filter '
-          OLD_EMAIL="robel@chainsafe.io"
-          CORRECT_NAME="rob1997"
-          CORRECT_EMAIL="robelgetnetrg@gmail.com"
+          OLD_EMAIL="$previous_email"
+          CORRECT_NAME="$new_username"
+          CORRECT_EMAIL="$new_email"
           if [ "$GIT_COMMITTER_EMAIL" = "$OLD_EMAIL" ]
           then
               export GIT_COMMITTER_NAME="$CORRECT_NAME"
@@ -52,3 +54,7 @@ jobs:
           fi
           ' --tag-name-filter cat -- --branches --tags
           git push --force --tags origin 'refs/heads/*'
+        env:
+          previous_email: ${{ github.event.inputs.previous_email }}
+          new_email: ${{ github.event.inputs.new_email }}
+          new_username: ${{ github.event.inputs.new_username }}
